--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
    <head>
       <title>Yours Cool Website</title>
    </head>
+
+<head>
+<style>
+body {
+  background-color: lightblue;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+</style>
+</head>
+
    <body>
       <h1>Welcome to website! ⭐️</h1>
       <p>How was your day? 🎉</p>
