--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@ p {
    <body>
       <h1>Welcome to website! ⭐️</h1>
       <p>How was your day? 🎉</p>
+      <a href="./about">Read the about page</a>
    </body>
 </html>
