updated about page

--- a/about.html
+++ b/about.html
@@ -5,6 +5,10 @@
    </head>
    <body>
       <h1>About website! 🎙</h1>
-      <p>Thanks for being here. 🙏</p>
+     
+      <p>By Guru Sahib Ji's grace task was to "Deploy a simple HTML website using GitHub Pages", tried to do it creating index.html and about.html with little CSS content.</p>
+      <p>Basically the link of the static website was obtained under "devops_task6" repository on github, followed by "settings" > "Pages" > selecting Branch and folder under "Build and deployment" > Save. This results in providing a link to website: https://karamveer-singh.github.io/devops_task6/ </p>
+      <p>Screenshots were added for the followed procedure</p>
+      <p>Thanks for being here. 🙏 </p>
    </body>
 </html>
