--- a/about.html
+++ b/about.html
@@ -6,6 +6,22 @@
 <head>
 <style>
 body {
+  background-color: lightgrey;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+
+
+
+body {
   color: blue;
 }
 
